--- a/portfolio.html
+++ b/portfolio.html
@@ -5,11 +5,16 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Портфоліо</title>
-
+<!--fint famaly-->
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+<!--normalize-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous"
+referrerpolicy="no-referrer" />
+
+<!--base style-->
    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -71,45 +76,45 @@
    <ul class="list">
     <li>
       <img src="./img/tehnokrak.jpg" alt="Портфоліо">
-      <h3 class="title-portfolio">Технокряк</h3>
+      <h2 class="title-portfolio">Технокряк</h2>
       <p class="portfolio-description">Веб-сайт</p>
     </li>
     <li>
       <img src="./img/New.jpg"
       alt="Портфоліо">
-      <h3 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+      <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
       <p class="portfolio-description">Дизайн </p>
     </li>
     <li>
       <img src="./img/Seafood.jpg"
       alt="Портфоліо">
-      <h3 class="title-portfolio">Ресторан  <span lang="en">Seafood</span></h3>
+      <h2 class="title-portfolio">Ресторан  <span lang="en">Seafood</span></h2>
       <p class="portfolio-description">Додаток </p>
     </li>
     <li>
       <img src="./img/Prime.jpg"
       alt="Портфоліо">
-      <h3 class="title-portfolio">Проєкт  <span lang="en">Prime</span></h3>
+      <h2 class="title-portfolio">Проєкт  <span lang="en">Prime</span></h2>
       <p class="portfolio-description">Маркетинг</p>
     </li>
     <li>
       <img src="./img/Boxesjpg.jpg" alt="Портфоліо">
-      <h3 class="title-portfolio">Проєкт<span lang="en">Boxes</span></h3>
+      <h2 class="title-portfolio">Проєкт<span lang="en">Boxes</span></h2>
       <p class="portfolio-description">Додаток</p>
     </li>
     <li>
       <img src="./img/LimitedEdition.jpg" alt="Портфоліо">
-      <h3 class="title-portfolio">Проєкт<span lang="en"> Limited Edition</span></h3>
+      <h2 class="title-portfolio">Проєкт<span lang="en"> Limited Edition</span></h2>
       <p class="portfolio-description">Дизайн</p>
     </li>
     <li>
       <img src="./img/LAB-min.jpg" alt="Портфоліо">
-      <h3 class="title-portfolio">Проєкт<span lang="en">LAB</span></h3>
+      <h2 class="title-portfolio">Проєкт<span lang="en">LAB</span></h2>
       <p class="portfolio-description">Маркетинг</p>
     </li>
     <li>
       <img src="./img/GrowingBusiness.jpg" alt="Портфоліо">
-      <h3 class="title-portfolio"><span lang="en">Growing Business</span></h3>
+      <h2 class="title-portfolio"><span lang="en">Growing Business</span></h2>
       <p>Додаток</p>
     </li>
    </ul>
