--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@ referrerpolicy="no-referrer" />
 <main>
   <!--Фільтри-->
   <section>
-    
+
       <ul class="list-filters list">
         <li class="button-filters">
           <button type="button" class="button active-btn">Усі</li>
@@ -120,7 +120,7 @@ referrerpolicy="no-referrer" />
    </ul>
   </section>
 </main>
-
+<!--Підвал-->
  <footer class="footer">
       <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-span">Studio</span></a>
       <address>
