--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ referrerpolicy="no-referrer" />
 
     <main>
       <!--Герой-->
-      <section class="hero">
+      <section class="hero section">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-button">Замовити послугу</button>
       </section>
 
       <!--Особливості-->
-      <section class="about">
+      <section class="about section">
         <h2> </h2>
         <ul class="list">
           <li>
@@ -89,7 +89,7 @@ referrerpolicy="no-referrer" />
       </section>
 
       <!--Чим ми займаємося-->
-      <section>
+      <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="list">
           <li>
@@ -131,7 +131,7 @@ referrerpolicy="no-referrer" />
         </ul>
       </section>
     </main>
-
+  <!--Підвал-->
     <footer class="footer">
       <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-span">Studio</span></a>
       <address>
