--- a/index.html
+++ b/index.html
@@ -5,150 +5,175 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <title>Web-Studio2</title>
-<!--fint famaly-->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <title>Web-Studio2</title>
+    <!--fint famaly-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-<!--normalize-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous"
-referrerpolicy="no-referrer" />
+    <!--normalize-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-<!--base style-->
-   <link rel="stylesheet" href="./css/styles.css">
+    <!--base style-->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-<!--Шапка сайту-->
+    <!--Шапка сайту-->
     <header class="header">
-<div class="container">
-
+      <div class="header-container container">
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
-<!--Навігація-->
-      <nav>
+        <!--Навігація-->
+        <nav class="header-nav">
+          <ul class="header-list list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link link active">Студія</a>
+            </li>
 
-        <ul class="nav-list list">
-          <li class="nav-item">
-            <a href="./index.html"
-            class="nav-link link active">Студія</a>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+            </li>
+
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!--Шапка контакти-->
+        <ul class="header-list-cont list">
+          <li>
+            <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-
-          <li class="nav-item">
-            <a href="./portfolio.html"
-            class="nav-link link">Портфоліо</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="./index.html"
-            class="nav-link link">Контакти</a>
+          <li>
+            <a class="header-tel link" href="tel:+380961111111">+380961111111</a>
           </li>
         </ul>
-      </nav>
-
-      <!--Шапка контакти-->
-      <ul class="list">
-        <li>
-          <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="header-tel link" href="tel:+380961111111">+380961111111</a>
-        </li>
-      </ul>
-</div>
+      </div>
     </header>
 
     <main>
       <!--Герой-->
       <section class="hero section">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="hero-button">Замовити послугу</button>
+        </div>
       </section>
 
       <!--Особливості-->
       <section class="about section">
-        <h2> </h2>
-        <ul class="list">
-          <li>
-            <h3 class="about-sub-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="about-description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-          </li>
-          <li>
-            <h3 class="about-sub-tittle">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="about-description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-          </li>
-          <li>
-            <h3 class="about-sub-tittle">ПЛАНУВАННЯ</h3>
-            <p class="about-description">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li>
-            <h3 class="about-sub-tittle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="about-description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li>
+              <h3 class="about-sub-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="about-description">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="about-sub-tittle">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="about-description">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="about-sub-tittle">ПЛАНУВАННЯ</h3>
+              <p class="about-description">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="about-sub-tittle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="about-description">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Чим ми займаємося-->
       <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img src="./img/img-min.jpg" alt="Десктопні додатки" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./img/img2-min.jpg" alt="Мобільні додатки" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./img/img3-min.jpg" alt="Дизайнерські рішення" width="370" />
-          </li>
-        </ul>
+        <div class="container container-dev">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="dev-list list">
+            <li class="dev-item">
+              <img src="./img/img-min.jpg" alt="Десктопні додатки" width="370" height="294" />
+            </li>
+            <li class="dev-item">
+              <img src="./img/img2-min.jpg" alt="Мобільні додатки" width="370" height="294" />
+            </li>
+            <li class="dev-item">
+              <img src="./img/img3-min.jpg" alt="Дизайнерські рішення" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Наша команда-->
-      <section>
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
-            <h3 class="team-sub-title">Ігор Дем'яненко</h3>
-            <p class="team-description" lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-            <h3 class="team-sub-title">Ольга Рєпіна</h3>
-            <p class="team-description" lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./img/mikola.jpg" alt="Микола Тарасов" width="270" height="260" />
-            <h3 class="team-sub-title">Микола Тарасов</h3>
-            <p class="team-description" lang="en">Marketing</p>
-          </li>
-          <li>
-            <img src="./img/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-            <h3 class="team-sub-title">Михайло Єрмаков</h3>
-            <p class="team-description" lang="en">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="list">
+            <li>
+              <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+              <h3 class="team-sub-title">Ігор Дем'яненко</h3>
+              <p class="team-description" lang="en">Product Designer</p>
+            </li>
+            <li>
+              <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+              <h3 class="team-sub-title">Ольга Рєпіна</h3>
+              <p class="team-description" lang="en">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./img/mikola.jpg" alt="Микола Тарасов" width="270" height="260" />
+              <h3 class="team-sub-title">Микола Тарасов</h3>
+              <p class="team-description" lang="en">Marketing</p>
+            </li>
+            <li>
+              <img src="./img/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+              <h3 class="team-sub-title">Михайло Єрмаков</h3>
+              <p class="team-description" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-  <!--Підвал-->
+    <!--Підвал-->
     <footer class="footer">
-      <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-span">Studio</span></a>
-      <address>
-        <ul class="list">
-          <li>
-            <a href="https://goo.gl/maps/yUURAm4yrq9FxePc8" target="_blank"
-              class="footer-link link">м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-           <li>
-          <a class="footer-address link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="footer-address link" href="tel:+380961111111">+380961111111</a>
-        </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo-footer link" href="./index.html"
+          >Web<span class="logo-footer-span">Studio</span></a
+        >
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                href="https://goo.gl/maps/yUURAm4yrq9FxePc8"
+                target="_blank"
+                class="footer-link link"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="footer-address link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a class="footer-address link" href="tel:+380961111111">+380961111111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
