--- a/portfolio.html
+++ b/portfolio.html
@@ -19,46 +19,42 @@ referrerpolicy="no-referrer" />
 </head>
 <body>
 <!--Шапка сайту-->
-    <header class="header">
-
-
-        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
-<!--Навігація-->
-      <nav>
-
-        <ul class="nav-list list">
-          <li class="nav-item">
-            <a href="./index.html"
-            class="nav-link link">Студія</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="./portfolio.html"
-            class="nav-link link active">Портфоліо</a>
-          </li>
-
-          <li class="nav-item">
-            <a href="./index.html"
-            class="nav-link link">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-
-      <!--Шапка контакти-->
-      <ul class="list">
-        <li>
-          <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+<header class="header">
+  <div class="header-container container">
+    <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+    <!--Навігація-->
+    <nav class="header-nav">
+      <ul class="header-list list">
+        <li class="nav-item">
+          <a href="./index.html" class="nav-link link ">Студія</a>
         </li>
-        <li>
-          <a class="header-tel link" href="tel:+380961111111">+380961111111</a>
+
+        <li class="nav-item">
+          <a href="./portfolio.html" class="nav-link link active">Портфоліо</a>
+        </li>
+
+        <li class="nav-item">
+          <a href="./index.html" class="nav-link link">Контакти</a>
         </li>
       </ul>
-    </header>
+    </nav>
+
+    <!--Шапка контакти-->
+    <ul class="header-list-cont list">
+      <li>
+        <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+      <li>
+        <a class="header-tel link" href="tel:+380961111111">+380961111111</a>
+      </li>
+    </ul>
+  </div>
+</header>
 
 <main>
   <!--Фільтри-->
-  <section>
-
+  <section class="section">
+<div class="container">
       <ul class="list-filters list">
         <li class="button-filters">
           <button type="button" class="button active-btn">Усі</li>
@@ -118,10 +114,12 @@ referrerpolicy="no-referrer" />
       <p>Додаток</p>
     </li>
    </ul>
+ </div>
   </section>
 </main>
 <!--Підвал-->
- <footer class="footer">
+ <footer class="footer section">
+  <div class="container">
       <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-span">Studio</span></a>
       <address>
         <ul class="list">
@@ -137,7 +135,7 @@ referrerpolicy="no-referrer" />
           <a class="footer-address link" href="tel:+380961111111">+380961111111</a>
         </li>
         </ul>
-      </address>
+      </address> </div>
     </footer>
 </body>
 </html>
