--- a/index.html
+++ b/index.html
@@ -66,33 +66,33 @@
       <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero-button">Замовити послугу</button>
+          <button type="button" class="hero-button order-button">Замовити послугу</button>
         </div>
       </section>
 
       <!--Особливості-->
       <section class="about section">
         <div class="container">
-          <ul class="list">
-            <li>
+          <ul class="about-list list">
+            <li class="about-tittle">
               <h3 class="about-sub-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="about-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="about-tittle">
               <h3 class="about-sub-tittle">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="about-description">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="about-tittle">
               <h3 class="about-sub-tittle">ПЛАНУВАННЯ</h3>
               <p class="about-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="about-tittle">
               <h3 class="about-sub-tittle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="about-description">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -124,8 +124,8 @@
       <section class="section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="list">
-            <li>
+          <ul class="team-lisi list">
+            <li >
               <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
               <h3 class="team-sub-title">Ігор Дем'яненко</h3>
               <p class="team-description" lang="en">Product Designer</p>
