--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
       <!--Особливості-->
       <section class="about section">
         <div class="container">
-          <ul class="about-list list">
+          <ul class="about-list list  card-set">
             <li class="about-tittle">
+
               <h3 class="about-sub-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="about-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
@@ -124,26 +125,36 @@
       <section class="section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="team-lisi list">
-            <li >
+          <ul class="team-lisi card-set list">
+            <li class="card-set-items team-item" >
               <img src="./img/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
-              <h3 class="team-sub-title">Ігор Дем'яненко</h3>
+
+             <div class="team-wrapper">
+              <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-description" lang="en">Product Designer</p>
+            </div>
             </li>
-            <li>
+            <li class="card-set-items team-item">
               <img src="./img/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-              <h3 class="team-sub-title">Ольга Рєпіна</h3>
+
+              <div class="team-wrapper">
+              <h3 class="team-name">Ольга Рєпіна</h3>
               <p class="team-description" lang="en">Frontend Developer</p>
+            </div>
             </li>
-            <li>
+            <li class="card-set-items team-item">
               <img src="./img/mikola.jpg" alt="Микола Тарасов" width="270" height="260" />
-              <h3 class="team-sub-title">Микола Тарасов</h3>
+              <div class="team-wrapper">
+                <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-description" lang="en">Marketing</p>
+            </div>
             </li>
-            <li>
+            <li class="card-set-items team-item">
               <img src="./img/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-              <h3 class="team-sub-title">Михайло Єрмаков</h3>
+              <div class="team-wrapper">
+              <h3 class="team-name">Михайло Єрмаков</h3>
               <p class="team-description" lang="en">UI Designer</p>
+            </div>
             </li>
           </ul>
         </div>
