--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@ referrerpolicy="no-referrer" />
   <!--Фільтри-->
   <section class="section">
 <div class="container">
-      <ul class="list-filters list">
+      <ul class="list-filters list ">
         <li class="button-filters">
           <button type="button" class="button active-btn">Усі</li>
         <li class="button-filters">
@@ -69,49 +69,69 @@ referrerpolicy="no-referrer" />
       </ul>
 
 
-   <ul class="list">
-    <li>
+   <ul class="list card-set">
+    <li class="card-set-item">
       <img src="./img/tehnokrak.jpg" alt="Портфоліо">
+      <div class="portfolio-wrapper">
       <h2 class="title-portfolio">Технокряк</h2>
       <p class="portfolio-description">Веб-сайт</p>
-    </li>
-    <li>
-      <img src="./img/New.jpg"
-      alt="Портфоліо">
-      <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+
+    <li class="card-set-item">
+      <img src="./img/New.jpg"    alt="Портфоліо">
+      <div class="portfolio-wrapper">
+         <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
       <p class="portfolio-description">Дизайн </p>
+    </div>
     </li>
-    <li>
-      <img src="./img/Seafood.jpg"
-      alt="Портфоліо">
+    <li class="card-set-item">
+      <img src="./img/Seafood.jpg"  alt="Портфоліо">
+      <div class="portfolio-wrapper">
       <h2 class="title-portfolio">Ресторан  <span lang="en">Seafood</span></h2>
       <p class="portfolio-description">Додаток </p>
+    </div>
     </li>
-    <li>
+    <li class="card-set-item">
       <img src="./img/Prime.jpg"
       alt="Портфоліо">
+      <div class="portfolio-wrapper">
       <h2 class="title-portfolio">Проєкт  <span lang="en">Prime</span></h2>
       <p class="portfolio-description">Маркетинг</p>
+    </div>
     </li>
-    <li>
+    <li class="card-set-item">
       <img src="./img/Boxesjpg.jpg" alt="Портфоліо">
+      <div class="portfolio-wrapper">
       <h2 class="title-portfolio">Проєкт<span lang="en">Boxes</span></h2>
       <p class="portfolio-description">Додаток</p>
+    </div>
     </li>
-    <li>
+    <li class="card-set-item">
+      <img src="./img/Borders5.jpg" alt="Портфоліо">
+      <div class="portfolio-wrapper">
+      <h2 class="title-portfolio"><span lang="en">Inspiration has no Borders</span></h2>
+      <p class="portfolio-description">Веб-сайт</p>
+    </div>
+    </li>
+    <li class="card-set-item">
       <img src="./img/LimitedEdition.jpg" alt="Портфоліо">
+      <div class="portfolio-wrapper">
       <h2 class="title-portfolio">Проєкт<span lang="en"> Limited Edition</span></h2>
       <p class="portfolio-description">Дизайн</p>
+    </div>
     </li>
-    <li>
+    <li class="card-set-item">
       <img src="./img/LAB-min.jpg" alt="Портфоліо">
+      <div class="portfolio-wrapper">
       <h2 class="title-portfolio">Проєкт<span lang="en">LAB</span></h2>
       <p class="portfolio-description">Маркетинг</p>
+    </div>
     </li>
-    <li>
+    <li class="card-set-item">
       <img src="./img/GrowingBusiness.jpg" alt="Портфоліо">
+      <div class="portfolio-wrapper">
       <h2 class="title-portfolio"><span lang="en">Growing Business</span></h2>
-      <p>Додаток</p>
+      <p class="portfolio-description">Додаток</p>
+    </div>
     </li>
    </ul>
  </div>
