--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <!--Герой-->
       <section class="hero section">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero-button order-button">Замовити послугу</button>
+          <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+          <button type="button" class="hero-button">Замовити послугу</button>
         </div>
       </section>
 
@@ -162,11 +162,11 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-wrapper">
         <a class="logo-footer link" href="./index.html"
           >Web<span class="logo-footer-span">Studio</span></a
         >
-        <address>
+        <address class="address">
           <ul class="list">
             <li>
               <a
