--- a/portfolio.html
+++ b/portfolio.html
@@ -138,10 +138,10 @@ referrerpolicy="no-referrer" />
   </section>
 </main>
 <!--Підвал-->
- <footer class="footer section">
-  <div class="container">
+ <footer class="footer">
+  <div class="container footer-wrapper">
       <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-span">Studio</span></a>
-      <address>
+      <address  class="address">
         <ul class="list">
           <li>
             <a href="https://goo.gl/maps/yUURAm4yrq9FxePc8" target="_blank"
@@ -155,7 +155,8 @@ referrerpolicy="no-referrer" />
           <a class="footer-address link" href="tel:+380961111111">+380961111111</a>
         </li>
         </ul>
-      </address> </div>
+      </address>
+    </div>
     </footer>
 </body>
 </html>
