правки от ментора

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <!--Шапка сайту-->
     <header class="header">
       <div class="header-container container">
-        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+
         <!--Навігація-->
         <nav class="header-nav">
+          <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
           <ul class="header-list list">
             <li class="nav-item">
               <a href="./index.html" class="nav-link link active">Студія</a>
@@ -65,7 +66,7 @@
       <!--Герой-->
       <section class="hero section">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-button">Замовити послугу</button>
         </div>
       </section>
