--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     </header>
 
     <main>
+
       <!--Герой-->
       <section class="hero section">
         <div class="container">
@@ -74,7 +75,7 @@
       <!--Особливості-->
       <section class="about section">
         <div class="container">
-          <ul class="about-list list  card-set">
+          <ul class="about-list list">
             <li class="about-tittle">
 
               <h3 class="about-sub-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -123,7 +124,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="section">
+      <section class="section team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-lisi card-set list">
@@ -163,12 +164,12 @@
     </main>
     <!--Підвал-->
     <footer class="footer">
-      <div class="container footer-wrapper">
+      <div class="container">
         <a class="logo-footer link" href="./index.html"
           >Web<span class="logo-footer-span">Studio</span></a
         >
         <address class="address">
-          <ul class="list">
+          <ul class="address-list list">
             <li>
               <a
                 href="https://goo.gl/maps/yUURAm4yrq9FxePc8"
