--- a/portfolio.html
+++ b/portfolio.html
@@ -140,10 +140,10 @@ referrerpolicy="no-referrer" />
 </main>
 <!--Підвал-->
  <footer class="footer">
-  <div class="container footer-wrapper">
+  <div class="container">
       <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-span">Studio</span></a>
       <address  class="address">
-        <ul class="list">
+        <ul class="address-list list">
           <li>
             <a href="https://goo.gl/maps/yUURAm4yrq9FxePc8" target="_blank"
               class="footer-link link">м. Київ, пр-т Лесі Українки, 26</a
